--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         android:layout_gravity="bottom|end"
-        app:backgroundTint="#ff0000"
+        app:backgroundTint="#00CC66"
         android:src="@android:drawable/ic_input_add"/>
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
