#Added basic WiFi chat functions can now send messages to ppl on same wifi network #Tweeked the layout a bit #Removed Extra Drawables

--- a/app/src/main/res/layout/type_message_area.xml
+++ b/app/src/main/res/layout/type_message_area.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/bg_screen3"
     android:gravity="bottom"
     android:orientation="horizontal">
 
     <EditText
+        android:id="@+id/txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -14,10 +15,11 @@
         android:textColor="#CFD8DC"
         android:hint="Write a message" />
 
-    <ImageView
+    <Button
+        android:id="@+id/Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="5"
         android:padding="4dp"
-        android:src="@android:drawable/ic_menu_send" />
+        android:background="@android:drawable/ic_media_play" />
 </LinearLayout>
