--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -4,13 +4,13 @@
     android:layout_height="match_parent"
     tools:context="com.gmail.prototype1.chataf.OneFragment">
 
+
      <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/blah"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"/>
-
-
+         android:text="Hi,Welcome to ChatAF (Alpha-1) press on the add button to scan for nearby devices and press on it again to chat with them if a new device connects after the scanning is done use the manual scan present in options menu"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:id="@+id/textView"
+         android:layout_alignParentTop="true"
+         android:layout_alignParentLeft="true"
+         android:layout_alignParentStart="true" />
 </RelativeLayout>
