--- a/app/src/main/res/menu/android_main_actions.xml
+++ b/app/src/main/res/menu/android_main_actions.xml
@@ -7,11 +7,11 @@
 
     <!-- Help -->
     <item   android:id="@+id/action_help"
-            android:title="@string/action_help"
+            android:title="Scan For Users"
             app:showAsAction="never"/>
 
     <!-- Check updates -->
     <item   android:id="@+id/action_Placeholder"
-            android:title="Placeholder"
+            android:title="Change Name"
             app:showAsAction="never" />
 </menu>
